# challenge-openspace-classifier

./: .coverage  .gitignore  README.md  pyproject.toml
data/: new_colleagues.csv  openspace.json
src/challenge_openspace_classifier/: __init__.py
src/challenge_openspace_classifier/utils/: file_utils.py  openspace.py  openspace_encoder.py  seat.py  table.py
test/utils/: test_table.py
tests/utils/: test_file_utils.py  test_openspace.py  test_seat.py  test_table.py
