[project]
name = "challenge-openspace-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryan Maina", email = "bryan.maina@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
challenge-openspace-classifier = "challenge_openspace_classifier:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=challenge_openspace_classifier"
